--- a/src/config/libs/i18n/data.json
+++ b/src/config/libs/i18n/data.json
@@ -4,13 +4,86 @@
     "header.stores": "Stores",
     "header.theBodyShopAtHome": "The Body Shop At Home ™",
     "header.customerCare": "Customer Care",
-    "header.hiThere": "Hi there"
+    "header.hiThere": "Hi there",
+
+    "footer.joinus": "JOIN US ON SOCIAL",
+    "footer.signup": "SIGN UP FOR OUR EXCLUSIVE OFFERS",
+    "footer.helpcenter": "HERE TO HELP",
+    "footer.custcare": "Customer Care",
+    "footer.privacy": "Privacy Enquiries",
+    "footer.useful": "USEFUL INFORMATION",
+    "footer.delivery": "Delivery Information",
+    "footer.tracking": "Order Tracking",
+    "footer.terms": "Terms and Conditions",
+    "footer.privacynotice": "Privacy Notice",
+    "footer.cookies": "Cookies",
+    "footer.mediaenq": "Media Enquiries",
+    "footer.ways": "WAYS TO SHOP",
+    "footer.loyalty": "Loyalty Club",
+    "footer.sitemap": "Sitemap",
+    "footer.aff": "Affiliates",
+    "footer.student": "Student Discount",
+    "footer.giftcard": "Gift Cards",
+    "footer.home": "The Body Shop At Home™",
+    "footer.about": "ABOUT US",
+    "footer.aboutus": "About Us",
+    "footer.gender": "Gender Pay Gap",
+    "footer.modern": "Modern Slavery Statement",
+    "footer.animal": "Against Animal Testing",
+    "footer.career": "Careers",
+    "footer.tax": "Tax Stratergy",
+    "footer.exclusion": "Exclusion Apply, See ",
+    "footer.copyright": " © 2019 The Body Shop International Limited",
+    "footer.trademark1": "® A registered trademark of The Body Shop International Limited; A trademark of The Body Shop International Limited All rights reserved.",
+    "footer.trademark2": " Registered Office: Watersmead, Littlehampton, West Sussex, BN17 6LS, United Kingdom; Registered in England No. 1284170",
+    "footer.live": "LIVE CHAT",
+    "footer.time": "MON TO SAT: 9AM - 9PM",
+    
+    
+    "home.bestseller": "BESTSELLER"
   },
+
   "ar": {
     "home.Title": "الصفحة الرئيسية",
     "header.stores": "",
     "header.theBodyShopAtHome": "",
     "header.customerCare": "",
-    "header.hiThere": ""
+    "header.hiThere": "",
+
+    "footer.joinus": "",
+    "footer.signup": "",
+    "footer.helpcenter": "",
+    "footer.custcare": "",
+    "footer.privacy": "",
+    "footer.useful": "",
+    "footer.delivery": "",
+    "footer.tracking": "",
+    "footer.terms": "",
+    "footer.privacynotice": "",
+    "footer.cookies": "",
+    "footer.mediaenq": "",
+    "footer.ways": "",
+    "footer.loyalty": "",
+    "footer.sitemap": "",
+    "footer.aff": "",
+    "footer.student": "",
+    "footer.giftcard": "",
+    "footer.home": "",
+    "footer.about": "",
+    "footer.aboutus": "",
+    "footer.gender": "",
+    "footer.modern": "",
+    "footer.animal": "",
+    "footer.career": "",
+    "footer.tax": "",
+    "footer.exclusion": "",
+    "footer.copyright": "",
+    "footer.trademark1": "",
+    "footer.trademark2": "",
+    "footer.live": "",
+    "footer.time": "",
+
+    
+    "home.bestseller": ""
   }
 }
