--- a/src/config/libs/i18n/data.json
+++ b/src/config/libs/i18n/data.json
@@ -58,7 +58,8 @@
     "home.signin": "SIGN IN/UP",
     "home.loveBody": "LOVE YOUR BODY™ CLUB",
     "home.community": "COMMUNITY TRADE RECYCLED PLASTICS",
-    "home.readMore": "READ MORE"
+    "home.readMore": "READ MORE",
+    "home.view": "VIEW"
 
   },
   "ar": {
