--- a/src/config/libs/i18n/data.json
+++ b/src/config/libs/i18n/data.json
@@ -19,7 +19,7 @@
     "footer.joinus": "JOIN US ON SOCIAL",
     "footer.signup": "SIGN UP FOR OUR EXCLUSIVE OFFERS",
     "footer.helpcenter": "HERE TO HELP",
-    "footer.custcare": "Customer Care",
+    "footer.custcare": "Customer Care (FAQ)",
     "footer.privacy": "Privacy Enquiries",
     "footer.useful": "USEFUL INFORMATION",
     "footer.delivery": "Delivery Information",
