--- a/src/config/libs/i18n/data.json
+++ b/src/config/libs/i18n/data.json
@@ -29,15 +29,16 @@
     "footer.cookies": "Cookies",
     "footer.mediaenq": "Media Enquiries",
     "footer.ways": "WAYS TO SHOP",
-    "footer.loyalty": "Loyalty Club",
+    "footer.loyalty": "Love Your Body Club",
     "footer.sitemap": "Sitemap",
     "footer.aff": "Affiliates",
     "footer.student": "Student Discount",
     "footer.giftcard": "Gift Cards",
     "footer.home": "The Body Shop At Home™",
     "footer.about": "ABOUT US",
-    "footer.aboutus": "About Us",
-    "footer.gender": "Gender Pay Gap",
+    "footer.whoweare": "Who We Are",
+    "footer.sustainability": "Sustainability",
+    "footer.plastics": "Plastics",
     "footer.modern": "Modern Slavery Statement",
     "footer.animal": "Against Animal Testing",
     "footer.career": "Careers",
@@ -46,8 +47,8 @@
     "footer.copyright": " © 2019 The Body Shop International Limited",
     "footer.trademark1": "® A registered trademark of The Body Shop International Limited; A trademark of The Body Shop International Limited All rights reserved.",
     "footer.trademark2": " Registered Office: Watersmead, Littlehampton, West Sussex, BN17 6LS, United Kingdom; Registered in England No. 1284170",
-    "footer.live": "LIVE CHAT",
-    "footer.time": "MON TO SAT: 9AM - 9PM",
+    "footer.contactus": "CONTACT US",
+    "footer.time": "SUN TO THU: 8AM TO 5PM",
     
     
     "home.bestseller": "OUR BESTSELLER",
@@ -99,8 +100,9 @@
     "footer.giftcard": "",
     "footer.home": "",
     "footer.about": "",
-    "footer.aboutus": "",
-    "footer.gender": "",
+    "footer.whoweare": "",
+    "footer.sustainability": "",
+    "footer.plastics": "",
     "footer.modern": "",
     "footer.animal": "",
     "footer.career": "",
@@ -109,7 +111,7 @@
     "footer.copyright": "",
     "footer.trademark1": "",
     "footer.trademark2": "",
-    "footer.live": "",
+    "footer.contactus": "",
     "footer.time": "",
     "home.bestseller": "",
     "home.statictext1": "",
