--- a/src/config/libs/i18n/data.json
+++ b/src/config/libs/i18n/data.json
@@ -37,7 +37,58 @@
     "footer.trademark1": "® A registered trademark of The Body Shop International Limited; A trademark of The Body Shop International Limited All rights reserved.",
     "footer.trademark2": " Registered Office: Watersmead, Littlehampton, West Sussex, BN17 6LS, United Kingdom; Registered in England No. 1284170",
     "footer.live": "LIVE CHAT",
-    "footer.time": "MON TO SAT: 9AM - 9PM"
+    "footer.time": "MON TO SAT: 9AM - 9PM",
+    
+    
+    "home.bestseller": "OUR BESTSELLER",
+    "home.statictext1": "Our loyalty programme lets you earn points and enjoy rewards every time you shop, so it’s always a win-win when you’re in The Club.",
+    "home.statictext2": "The Club is free to join, and we love treating our members. Get a gift on your birthday, member offers, new product sneak peeks and invites to exclusive parties. ",
+    "home.statictext3": "At The Body Shop, we’re committed to tackling the plastic crisis differently. ",
+    "home.statictext4": " Not using plastic is not the only answer. If used responsibly it can be sustainable, so we need to show love for the plastic that we do use.  Discover how we’re fighting for people and the planet with Community Trade recycled plastic from Bengaluru, India.",
+    "home.signin": "SIGN IN/UP",
+    "home.loveBody": "LOVE YOUR BODY™ CLUB",
+    "home.community": "COMMUNITY TRADE RECYCLED PLASTICS",
+    "home.readMore": "READ MORE",
+
+    "login.Title" : "LOGIN OR REGISTER",
+    "login.Login" : "LOGIN",
+    "login.Register" : "REGISTER",
+    "login.email" : "Email address",
+    "login.password" : "Password",
+    "login.forgotPassword" : "Forgot your password?",
+    "login.loginBtn" : "LOGIN",
+    "login.notRegisteredYet" : "Not registered yet?",
+    "login.registerNow" : "Register now",
+
+    "register.title" : "Title",
+    "register.firstName" : "FirstName",
+    "register.lastName" : "LastName",
+    "register.email" : "Email address",
+    "register.password" : "Password",
+    "register.confirmPassword" : "Confirm Password",
+    "register.wantToJoin" : "YES, I WANT TO JOIN",
+    "register.termsNconditions" : "Terms and Conditions",
+    "register.termsNconditionsInfo" : "Tick to confirm that you are over the age of 16 and that you have read and agreed to the Love Your Body™ Club",
+    "register.mobile" : "Mobile",
+    "register.news" : "Yes, please sign me up for exclusive news, updates and offers from The Body Shop by",
+    "register.emailNews" : "Email",
+    "register.smsNews" : "SMS",
+    "register.postalNews" : "Postal",
+    "register.overAge" : "I confirm that I am over the age of 16 and have read and agreed to the",
+    "register.register" : "REGISTER",
+    "register.note" : "We will use your information to manage your account and requests and for research and analytics. We may share your information with trusted parties acting on our behalf and other The Body Shop companies. For further information on how we treat your personal information, please see our Privacy Notice",
+
+    "register.validation.firstName.empty" : "First Name cannot be empty",
+    "register.validation.lastName.empty" : "Last Name cannot be empty",
+    "register.validation.email.empty" : "Email address cannot be empty",
+    "register.validation.password.empty" : "Password cannot be empty",
+    "register.validation.confirmPassword.empty" : "Confirm Password cannot be empty",
+    "register.validation.contactNumber.empty" : "Mobile number cannot be empty",
+    "register.validation.firstName.onlyletters" : "First Name should contain letters only",
+    "register.validation.lastName.onlyletters" : "Last Name should contain letters only",
+    "register.validation.email.invalid" : "Email address is not valid",
+    "register.validation.password.notMatched" : "Passwords not matched"
+
   },
 
   "ar": {
@@ -79,6 +130,45 @@
     "footer.trademark2": "",
     "footer.live": "",
     "footer.time": ""
+
+    "login.Title" : "",
+    "login.LoginButton" : "",
+    "login.Register" : "",
+    "login.email" : "",
+    "login.password" : "",
+    "login.forgotPassword" : "",
+    "login.loginBtn" : "",
+    "login.notRegisteredYet" : "",
+    "login.registerNow" : "",
+
+    "register.title" : "",
+    "register.firstName" : "",
+    "register.lastName" : "",
+    "register.email" : "",
+    "register.password" : "",
+    "register.confirmPassword" : "",
+    "register.wantToJoin" : "",
+    "register.termsNconditions" : "",
+    "register.termsNconditionsInfo" : "",
+    "register.mobile" : "",
+    "register.news" : "",
+    "register.emailNews" : "",
+    "register.smsNews" : "",
+    "register.postalNews" : "",
+    "register.overAge" : "",
+    "register.register" : "",
+    "register.note" : "",
+
+    "register.validation.firstName.empty" : "",
+    "register.validation.lastName.empty" : "",
+    "register.validation.email.empty" : "",
+    "register.validation.password.empty" : "",
+    "register.validation.confirmPassword.empty" : "",
+    "register.validation.contactNumber.empty" : "",
+    "register.validation.firstName.onlyletters" : "",
+    "register.validation.lastName.onlyletters" : "",
+    "register.validation.email.invalid" : "",
+    "register.validation.password.notMatched" : ""
 
   }
 }
