lgin/register pages updated

--- a/src/config/libs/i18n/data.json
+++ b/src/config/libs/i18n/data.json
@@ -112,7 +112,8 @@
     "register.validation.firstName.onlyletters" : "First Name should contain letters only",
     "register.validation.lastName.onlyletters" : "Last Name should contain letters only",
     "register.validation.email.invalid" : "Email address is not valid",
-    "register.validation.password.notMatched" : "Passwords not matched"
+    "register.validation.password.notMatched" : "Passwords not matched",
+    "register.validation.password.minLength" : "Password must be 8 and 24 characters long and must contain letters and numbers"
   },
   "ar": {
     "home.Title": "الصفحة الرئيسية",
@@ -225,6 +226,7 @@
     "register.validation.firstName.onlyletters" : "",
     "register.validation.lastName.onlyletters" : "",
     "register.validation.email.invalid" : "",
-    "register.validation.password.notMatched" : ""
+    "register.validation.password.notMatched" : "",
+    "register.validation.password.minLength" : ""
   }
 }
